--- a/src/components/app/App.css
+++ b/src/components/app/App.css
@@ -7,4 +7,13 @@
 body {
   width: 100vw;
   height: 100vh;
+  padding: 30px;
+}
+
+.form-button {
+  background: rgb(97, 165, 228);
+  width: 100%;
+  color: white;
+  font-size: 30px;
+  margin-bottom: 10px;
 }
