--- a/src/components/form/Form.css
+++ b/src/components/form/Form.css
@@ -1,6 +1,8 @@
 .form-wrapper {
   position: absolute;
-  background: aliceblue;
+  top: 0;
+  left: 0;
+  background: white;
   width: 100%;
   height: 100%;
   padding: 30px;
@@ -42,7 +44,7 @@
   color: white;
   border: 1px solid  rgb(97, 165, 228);
   border-radius: 2px;
-  margin-top: 30px;
+  margin-top: 32px;
 }
 
 .cancel-button {
