--- a/src/components/app/App.css
+++ b/src/components/app/App.css
@@ -8,6 +8,7 @@ body {
   width: 100vw;
   height: 100vh;
   padding: 30px;
+  max-width: 320px;
 }
 
 .form-button {
@@ -16,4 +17,7 @@ body {
   color: white;
   font-size: 30px;
   margin-bottom: 10px;
+  font-weight: 600;
+  border: 1px solid rgb(97, 165, 228);
+  padding-bottom: 2px;
 }
