--- a/src/components/form/Form.css
+++ b/src/components/form/Form.css
@@ -16,6 +16,8 @@
   border: 1px solid lightgrey; 
   border-radius: 2px;
   margin-top: 5px;
+  color: grey;
+  padding: 10px;
 }
 
 .date-input::-webkit-inner-spin-button {
@@ -64,6 +66,7 @@
   border-radius: 2px;
   margin-top: 32px;
   font-size: 14px;
+  font-weight: 600;
 }
 
 .cancel-button {
